# osma

./: .gitignore  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
osma/: __init__.py  api.py  cli.py
osma/aggregators/: __init__.py  jekyll.py  yekyll.py
osma/sources/: __init__.py  google.py  newsapi.py  reddit.py  twitter.py
search/: search_index.json
